welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if estFaceMur() { recule(); } else { avance() } 
   ^Program:4: error: illegal start of simple expression
	}
        ^